syntax = "proto3";

// import public "google/protobuf/timestamp.proto"; 
package SrvUsers;

// 用户相关操作
service SrvUsers {
	// 添回
	rpc Add(AddRequest) returns (AddResponse) {}
	// 获取列表
	rpc GetList(GetListRequest) returns (GetListResponse) {}
	// 获取单个记录
	rpc Get(GetRequest) returns (GetResponse) {}
	// 修改
	rpc Update(UpdateRequest) returns (UpdateResponse) {}
	// 批量删除（假删除）
	rpc BatchDelete(DeleteRequest) returns (DeleteResponse) {}
}


message User {
	// 编号Id
	int64 ID = 1;
	// 用户名称
	string UserName = 2;
	// 真实姓名或昵称
	string RealyName = 3;
	// 密码
	string Password = 4;
	// authkey
	string AuthKey = 5;
	// Email
	string Email = 6;
	// 是否删除
	bool IsDel = 7;
	// 备注
	string Note = 8;
	int64 ParentID = 9;
	int64 CreateTime = 10;
	int64 LastUpdateTime = 11;
}

message AddRequest {
	User Model = 1;
}

message AddResponse {
	int64 NewID = 1;
}

message GetListRequest{
	int64 PageSize = 1;
	int64 CurrentPageIndex = 2;
	string OrderBy = 3;
}

message GetListResponse{
	int64 TotalCount = 1;
	repeated User List = 2;
}

message GetRequest {
	int64 ID = 1;
	string UserName = 2;
}

message GetResponse {
	User Model = 1;
}

message UpdateRequest {
	User Model = 1;
}

message UpdateResponse {
	// 是否更新成功
	int64 Updated = 1;
}

message DeleteRequest {
	repeated string IDArray = 1;
}

message DeleteResponse {
	// 是否删除成功,批量删除不需要返回值
	int64 Deleted = 1;
}
